--- a/css/frontend.css
+++ b/css/frontend.css
@@ -18,7 +18,7 @@
 .site-wrapper {
     width: 100%;
     height: 100%;
-    background: url('/group4/images/children.jpg') left center no-repeat;
+    background: url('/group4/images/children.jpg') left center no-repeat fixed;
     background-size: cover;
 }
 .site-wrapper:before {
@@ -29,6 +29,7 @@
     bottom: 0;
     left: 0;
     background-image: linear-gradient(to bottom right, #000, #999);
+    background-attachment: fixed;
     opacity: .5;
 }
 
