--- a/css/frontend.css
+++ b/css/frontend.css
@@ -171,7 +171,7 @@ body {
 .site-wrapper {
     width: 100%;
     height: 100%;
-    background: url('/group4/images/children.jpg') left center no-repeat fixed;
+    background: url('/~group4/images/children.jpg') left center no-repeat fixed;
     background-size: cover;
 }
 .site-wrapper:before {
