--- a/css/frontend.css
+++ b/css/frontend.css
@@ -67,6 +67,8 @@ body {
 .masthead-brand {
     margin-top: 10px;
     margin-bottom: 10px;
+    font-family: 'Cinzel Decorative', cursive;
+    font-size: 6em;
 }
 
 .masthead-nav > li {
